--- a/TODO
+++ b/TODO
@@ -4,8 +4,8 @@ david 13:45 10.06.2026:
     [x] Change image display from static to dynamically gathered via slug
 
     Shop Page:
-    [] Make sorting and filtering work properly
-    [] Maybe change pagination for proper filtering?
+    [?] Make sorting and filtering work properly
+    [x] Maybe change pagination for proper filtering?
 
     Cart Item Component:
-    [] Look over and fix styling a little
+    [x] Look over and fix styling a little
